--- a/config.plist
+++ b/config.plist
@@ -227,7 +227,7 @@
 		<key>Scan</key>
 		<true/>
 		<key>TextOnly</key>
-		<true/>
+		<false/>
 		<key>Theme</key>
 		<string>Glassy</string>
 	</dict>
