--- a/kexts/Other/NoVPAJpeg.kext/Contents/Info.plist
+++ b/kexts/Other/NoVPAJpeg.kext/Contents/Info.plist
@@ -3,67 +3,79 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>17E202</string>
+	<string>18B75</string>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>BrcmFirmwareData</string>
+	<string>NoVPAJpeg</string>
+	<key>CFBundleGetInfoString</key>
+	<string>v1.0.0 built with Lilu 1.2.8</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.no-one.BrcmFirmwareStore</string>
+	<string>org.vulgo.NoVPAJpeg</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>BrcmFirmwareData</string>
+	<string>NoVPAJpeg</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.10</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>1.0.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.2.10</string>
+	<string>1.0.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>9E145</string>
+	<string>10B61</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>10M2518</string>
+	<string>18B71</string>
 	<key>DTSDKName</key>
-	<string>macosx10.6</string>
+	<string>macosx10.14</string>
 	<key>DTXcode</key>
-	<string>0930</string>
+	<string>1010</string>
 	<key>DTXcodeBuild</key>
-	<string>9E145</string>
+	<string>10B61</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>BrcmFirmwareStore</key>
+		<key>NoVPAJpeg</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.no-one.BrcmFirmwareStore</string>
+			<string>org.vulgo.NoVPAJpeg</string>
 			<key>IOClass</key>
-			<string>BrcmFirmwareStore</string>
+			<string>NoVPAJpeg</string>
 			<key>IOMatchCategory</key>
-			<string>BrcmFirmwareStore</string>
+			<string>NoVPAJpeg</string>
 			<key>IOProviderClass</key>
-			<string>disabled_IOResources</string>
+			<string>IOResources</string>
+			<key>IOResourceMatch</key>
+			<string>IOKit</string>
 		</dict>
 	</dict>
 	<key>OSBundleCompatibleVersion</key>
-	<string>2.2.10</string>
+	<string>1.0.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
+		<key>as.vit9696.Lilu</key>
+		<string>1.2.0</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>18.0.0</string>
+		<key>com.apple.kpi.dsep</key>
+		<string>18.0.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>9.0</string>
+		<string>18.0.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>9.0</string>
+		<string>18.0.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>9.0</string>
+		<string>18.0.0</string>
+		<key>com.apple.kpi.unsupported</key>
+		<string>18.0.0</string>
 	</dict>
-	<key>Source Code</key>
-	<string>https://github.com/RehabMan/BrcmPatchRAM.git</string>
+	<key>OSBundleRequired</key>
+	<string>Root</string>
 </dict>
 </plist>
