--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -124,6 +124,12 @@
 	<dict>
 		<key>C6</key>
 		<false/>
+		<key>FrequencyMHz</key>
+		<integer>3195</integer>
+		<key>SavingMode</key>
+		<integer>255</integer>
+		<key>Type</key>
+		<string>0x0402</string>
 		<key>UseARTFrequency</key>
 		<false/>
 	</dict>
@@ -1342,6 +1348,24 @@
 				<key>Replace</key>
 				<data>
 				g/k/Dw==
+				</data>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>Enable TRIM for SSD</string>
+				<key>Disabled</key>
+				<true/>
+				<key>Find</key>
+				<data>
+				AEFQUExFIFNTRAA=
+				</data>
+				<key>InfoPlistPatch</key>
+				<false/>
+				<key>Name</key>
+				<string>com.apple.iokit.IOAHCIBlockStorage</string>
+				<key>Replace</key>
+				<data>
+				AAAAAAAAAAAAAAA=
 				</data>
 			</dict>
 		</array>
