--- a/Opencore/OC/Kexts/LiluFriend.kext/Contents/Info.plist
+++ b/Opencore/OC/Kexts/LiluFriend.kext/Contents/Info.plist
@@ -2,22 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AppleSecurityExtension</key>
+	<true/>
 	<key>BuildMachineOSBuild</key>
-	<string>17G6030</string>
+	<string>17G65</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>WhateverGreen</string>
+	<string>LiluFriend</string>
+	<key>CFBundleGetInfoString</key>
+	<string>LiluFriend v1.1.0, Copyright © 2017 Vanilla. All rights reserved.</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.vit9696.WhateverGreen</string>
+	<string>com.apple.security.LiluFriend</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>WhateverGreen</string>
+	<string>LiluFriend</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.4</string>
+	<string>1.1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,48 +29,31 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.3.4</string>
+	<string>1.1.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10B61</string>
+	<string>10A255</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>14D125</string>
+	<string>12F37</string>
 	<key>DTSDKName</key>
-	<string>macosx10.10</string>
+	<string>macosx10.8</string>
 	<key>DTXcode</key>
-	<string>1010</string>
+	<string>1000</string>
 	<key>DTXcodeBuild</key>
-	<string>10B61</string>
+	<string>10A255</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>NVHDAEnabler</key>
+		<key>LiluFriend</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.vit9696.WhateverGreen</string>
+			<string>com.apple.security.LiluFriend</string>
 			<key>IOClass</key>
-			<string>NVHDAEnabler</string>
+			<string>LiluFriend</string>
 			<key>IOMatchCategory</key>
-			<string>IOFramebuffer</string>
-			<key>IOPCIClassMatch</key>
-			<string>0x03000000&amp;0xff000000</string>
-			<key>IOPCIMatch</key>
-			<string>0x000010de&amp;0x0000ffff</string>
-			<key>IOProbeScore</key>
-			<integer>300000</integer>
-			<key>IOProviderClass</key>
-			<string>IOPCIDevice</string>
-		</dict>
-		<key>as.vit9696.WhateverGreen</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>as.vit9696.WhateverGreen</string>
-			<key>IOClass</key>
-			<string>WhateverGreen</string>
-			<key>IOMatchCategory</key>
-			<string>WhateverGreen</string>
+			<string>LiluFriend</string>
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
@@ -74,18 +61,10 @@
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 vit9696. All rights reserved.</string>
-	<key>OSBundleCompatibleVersion</key>
-	<string>1.0</string>
+	<string>Copyright © 2017 Vanilla. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>as.vit9696.Lilu</key>
-		<string>1.2.0</string>
-		<key>com.apple.iokit.IOPCIFamily</key>
-		<string>1.0.0b1</string>
 		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.dsep</key>
 		<string>12.0.0</string>
 		<key>com.apple.kpi.iokit</key>
 		<string>12.0.0</string>
