--- a/OC/Kexts/SMCAMDProcessor.kext/Contents/Info.plist
+++ b/OC/Kexts/SMCAMDProcessor.kext/Contents/Info.plist
@@ -7,25 +7,23 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>WhateverGreen</string>
+	<string>SMCAMDProcessor</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.vit9696.WhateverGreen</string>
+	<string>wtf.spinach.SMCAMDProcessor</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>WhateverGreen</string>
+	<string>SMCAMDProcessor</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.1</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
+	<string>1.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.4.1</string>
+	<string>1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -42,49 +40,32 @@
 	<string>11E708</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>NVHDAEnabler</key>
+		<key>wtf.spinach.SMCAMDProcessor</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.vit9696.WhateverGreen</string>
+			<string>wtf.spinach.SMCAMDProcessor</string>
 			<key>IOClass</key>
-			<string>NVHDAEnabler</string>
+			<string>SMCAMDProcessor</string>
 			<key>IOMatchCategory</key>
-			<string>IOFramebuffer</string>
-			<key>IOPCIClassMatch</key>
-			<string>0x03000000&amp;0xff000000</string>
-			<key>IOPCIMatch</key>
-			<string>0x000010de&amp;0x0000ffff</string>
-			<key>IOProbeScore</key>
-			<integer>300000</integer>
+			<string>SMCAMDProcessor</string>
 			<key>IOProviderClass</key>
-			<string>IOPCIDevice</string>
-		</dict>
-		<key>as.vit9696.WhateverGreen</key>
-		<dict>
-			<key>CFBundleIdentifier</key>
-			<string>as.vit9696.WhateverGreen</string>
-			<key>IOClass</key>
-			<string>WhateverGreen</string>
-			<key>IOMatchCategory</key>
-			<string>WhateverGreen</string>
-			<key>IOProviderClass</key>
-			<string>IOResources</string>
-			<key>IOResourceMatch</key>
-			<string>IOKit</string>
+			<string>AMDRyzenCPUPowerManagement</string>
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.8</string>
+	<string>10.13</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 vit9696. All rights reserved.</string>
-	<key>OSBundleCompatibleVersion</key>
-	<string>1.0</string>
+	<string>Copyright © 2020 trulyspinach. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
-		<string>1.2.0</string>
+		<string>1.3.9</string>
+		<key>as.vit9696.VirtualSMC</key>
+		<string>1.0.0</string>
 		<key>com.apple.iokit.IOPCIFamily</key>
-		<string>1.0.0b1</string>
+		<string>2.9</string>
+		<key>com.apple.kec.Libm</key>
+		<string>1.0</string>
 		<key>com.apple.kpi.bsd</key>
 		<string>12.0.0</string>
 		<key>com.apple.kpi.dsep</key>
@@ -97,8 +78,8 @@
 		<string>12.0.0</string>
 		<key>com.apple.kpi.unsupported</key>
 		<string>12.0.0</string>
+		<key>wtf.spinach.AMDRyzenCPUPowerManagement</key>
+		<string>0.6</string>
 	</dict>
-	<key>OSBundleRequired</key>
-	<string>Root</string>
 </dict>
 </plist>
