--- a/OC/Kexts/RealtekRTL8111.kext/Contents/Info.plist
+++ b/OC/Kexts/RealtekRTL8111.kext/Contents/Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19E266</string>
+	<string>16G1114</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SmallTreeIntel82576</string>
+	<string>RealtekRTL8111</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.smalltree.driver.SmallTreeIntel82576</string>
+	<string>com.insanelymac.RealtekRTL8111</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SmallTreeIntel82576</string>
+	<string>RealtekRTL8111</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>2.2.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,47 +25,63 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.3.0</string>
+	<string>2.2.2</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11E146</string>
+	<string>8E3004b</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>19E258</string>
+	<string>16E185</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>1140</string>
+	<string>0833</string>
 	<key>DTXcodeBuild</key>
-	<string>11E146</string>
+	<string>8E3004b</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>SmallTreeIntel82576</key>
+		<key>RTL8111 PCIe Adapter</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.smalltree.driver.SmallTreeIntel82576</string>
+			<string>com.insanelymac.RealtekRTL8111</string>
+			<key>Driver_Version</key>
+			<string>2.2.2</string>
 			<key>IOClass</key>
-			<string>SmallTreeIntel82576</string>
-			<key>IOPCIPrimaryMatch</key>
-			<string>0x15218086 0x15228086 0x15398086</string>
-			<key>IOPCITunnelCompatible</key>
-			<true/>
+			<string>RTL8111</string>
+			<key>IOPCIMatch</key>
+			<string>0x816810ec 0x81681186</string>
+			<key>IOProbeScore</key>
+			<integer>1000</integer>
 			<key>IOProviderClass</key>
 			<string>IOPCIDevice</string>
-			<key>IOResourceMatch</key>
-			<string>IOKit</string>
-			<key>IOUserClientClass</key>
-			<string>STECUserClient</string>
+			<key>Model</key>
+			<string>RTL8111</string>
+			<key>Vendor</key>
+			<string>Realtek</string>
+			<key>disableASPM</key>
+			<true/>
+			<key>enableCSO6</key>
+			<true/>
+			<key>enableEEE</key>
+			<true/>
+			<key>enableTSO4</key>
+			<true/>
+			<key>enableTSO6</key>
+			<true/>
+			<key>intrMitigate</key>
+			<integer>53080</integer>
+			<key>rxPolling</key>
+			<true/>
 		</dict>
 	</dict>
-	<key>LSMinimumSystemVersion</key>
-	<string>10.15</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2013 Laura Müller. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.apple.iokit.IONetworkingFamily</key>
-		<string>1.5</string>
+		<string>1.5.0</string>
 		<key>com.apple.iokit.IOPCIFamily</key>
 		<string>1.7</string>
 		<key>com.apple.kpi.bsd</key>
@@ -77,5 +93,7 @@
 		<key>com.apple.kpi.mach</key>
 		<string>8.10.0</string>
 	</dict>
+	<key>OSBundleRequired</key>
+	<string>Network-Root</string>
 </dict>
 </plist>
